--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <header class="bg">
+  </header>
 
-  Capture and Share the World's Moments
+  <section>
+    <div class="div-geral">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="div-container-1">
+        <img src="/home/gg/Documentos/Ironhack/Week 1/lab-css-instagram-clone/starter-code/images/phones.png" alt="phones"
+          height="400px">
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="div-container-2">
 
-  Oh yeah, did we mention it's free?
+        <div class="brand-img">
+          <p><img src="/home/gg/Documentos/Ironhack/Week 1/lab-css-instagram-clone/starter-code/images/brand.png" alt="brand"
+              height="60px;"><button><img src="/home/gg/Documentos/Ironhack/Week 1/lab-css-instagram-clone/starter-code/images/home.png"
+                alt="home"> Log in</button></p>
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+        <div class="text">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <b>fast</b>,<b> beautiful</b> and <b>fun</b> way to share your life with friends and family.
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+            it's
+            that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            Oh yeah, did we mention it's free?</p>
+            <div class="button">
+          <button><img src="../starter-code/images/badge-iphone.png" alt="badge-iphone"></button>
+          <button><img src="../starter-code/images/badge-android.png" alt="badge-android"></button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
+
 </html>
