--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="main-container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="left-side-image">
+    <img src="images/phones.png" alt="Picture of two phones browsing Instagram sobreposing eachother">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="header-and-text-container">
+  <header class="header-container">
+    <img src="images/brand.png" alt="Instagram logo and title">
+    <div class="btn">
+      <button href="#"><img src="images/home.png"><span>Log in</span></button>
+    </div>
+  </header>
+  <span class="clear-float"></span>
+  <section class="text-section">
+    <h2>Capture and Share the World's Moments</h2>
+    <p>
+      Instagram is a <span class="strong-p">fast</span>, <span class="strong-p">beautiful</span> and <span class="strong-p">fun</span> way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+    <p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>  
+    <p>
+          Oh yeah, did we mention it's free?
+    </p>
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="web-store-link-container">
+      <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"></a>
+      <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a>  
+    </div>
+  </section>
+</div>
+  <span class="clear-float"></span>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer class="footer-container">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li> &copy; 2014 Instagram</li>
+      </ul>
+      
+    </footer>
+</div>
 
-  &copy; 2014 Instagram
+
+  
 </body>
 </html>
