--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+	<head>
+		<html lang="en">
+			<meta charset="UTF-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<meta http-equiv="X-UA-Compatible" content="ie=edge">
+			<link rel="stylesheet" type="text/css" href="../starter-code/css/main.css">
+			<title>Instagram</title>
+	</head>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+	<body>
+		<header></header>
+		<section id="geral">
+					<figure>
+						<img src="./images/phones.png" alt="phones">
+					</figure>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+				<div class="container">
+					<div class="contenttop">
+						<img src="./images/brand.png" alt="Instagram">
+						<button type="button" name="button"><img src="./images/home.png" alt="home"> Log In </button>
+					</div>
 
-  Oh yeah, did we mention it's free?
+					<div class="content">
+						<h2>Capture and Share the World's Moments</h2>
+						<p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+						<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+							it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+							world.</p>
+						<p>Oh yeah, did we mention it's free?</p>
+						<img src="./images/badge-iphone.png" alt="ios">
+						<img src="../starter-code/images/badge-android.png" alt="android">
+					</div>
+				</div>
+		</section>
+		
+		<footer>
+			<ul>
+				<li>About Us</li>
+				<li>Support</li>
+				<li>Blog</li>
+				<li>Press</li>
+				<li>API</li>
+				<li>Jobs</li>
+				<li>Privacy</li>
+				<li>Terms</li>
+				<li>&copy; 2014 Instagram</li>
+			</ul>
+		</footer>
 
-  Download on the App Store
-  Get it on Google Play
+	</body>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
 </html>
