--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel = "stylesheet" type = "text/css" href = "css/main.css">
 </head>
-<body>
-  Instagram
+<body>  
+  <section id = "header"> 
+  </section>
 
-  Capture and Share the World's Moments
+  <section id = "section-one">
+      <div class = "section-one-content">
+          <img src = "images/phones.png" class = "section-one-image"/>
+          <div class = "section-one-text">
+              <div class = "section-one-login">
+                <img src = "images/brand.png" alt = "Brand">
+                <button>Log in</button>
+              </div>
+              <div class = "section-one-info">
+              <h2>Capture and Share the World's Moments</h2>
+              <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+                 it's that easy. You can even share to Facebook, Twitter, Tumblr and more.
+                  It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>
+              <button class = "buttonAppStore"></button>
+              <button class = "buttonGooglePlay"></button>
+              </div>
+              </div>
+          </div>
+          <div class = "clear-fix"></div>
+  </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section id = "section-two">
+    <ul>
+      <li><a href="#">ABOUT US</a></li>
+      <li><a href="#">SUPPORT</a></li>
+      <li><a href="#">BLOG</a></li>
+      <li><a href="#">PRESS</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">JOBS</a></li>
+      <li><a href="#">PRIVACY</a></li>
+      <li><a href="#">TERMS</a></li>
+      <li class = "footer">&copy; 2014 Instagram</li>
+    </ul>
+  </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
