--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  </head>
+  <body>
+    <img class="imagem" src="images/phones.png" alt="Phone">
+    <div>
+      <div class="fundo">
+        <div class="direita">
+          <img class="instagram" src="images/brand.png" alt="Instagram">
+          <img class="home" src="images/home.png" alt="Home">
+        </div>
+      </div>
+      <section>
+        <div>
+          <img class="frame" src="images/frame.png" alt="Frame">
+          <div>
+            <h2>Capture and Share<br> the World's Moments</h2>
+            <p>Instagram is a fast, beautiful and fun way to share your life<br>
+              with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look<br>
+              and feel, then post to Instagram &mdash; it's that easy. You can<br>
+              even share to Facebook, Twitter, Tumblr and more. It's a<br>
+              new way to see the world.</p>
+          </div>
+        </div>
+      </section>
+      <div>
+        Download on the<br> App Store
+        Get it on<br> Google Play
+      </div>
+      <footer>
+        <section>
+          <ul>
+            <li>About Us</li>
+            <li>Support</li>
+            <li>Support</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>API</li>
+            <li>Jobs</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+          </ul>
+        </section>
+        &copy; 2014 Instagram
+      </footer>
+    </div>
+  </body>
 </html>
