--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="./css/main.css">
+
 <head>
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <header></header>
+  <section class="container">
+    <img class="img" src="./images/phones.png" alt=" Iphone Logo">
+    <div class="content">
+      <div class="icon-btn">
+        <img src="./images/brand.png" alt="Instagram Logo">
+        <button><img src="./images/home.png" alt="Home Logo">Login</button>
+      </div>
+      <div class="text">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <img src="./images/badge-iphone.png" alt="Badge Iphone">
+        <img src="./images/badge-android.png" alt="Badge Android">
+      </div>
+    </div>
+    <div class="clearfix"></div>
+  </section>
+  <footer class="footer">
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li id="copyright">&copy;2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
+
 </html>
