--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href= "css/main.css"/>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<header></header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<section>
+  <div id = "marg">
+    <div class = "phone">
+      <img src = "images/phones.png" alt = "phone"/>
+    </div>
+    
+    <div class = "tresright">
+      <div class= "topo">
+        <img src = "../starter-code/images/brand.png" alt = "brand">
+        <button type="submit"><a class = "limpa" href = "#"><img src = "../starter-code/images/home.png" alt = "home" class = "home"/>Log in</a></button>
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class = "image">
+        <div class = "texttitle">
+          <h1>Capture and Share <br>the World's Moments</h1>
+        </div>
+        <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free? </p>
+      </div>
 
-  Oh yeah, did we mention it's free?
+      <div class = "img">
+        <img src = "images/badge-iphone.png" alt = "iphone"/>
+      
+        <img src = "images/badge-android.png" alt = "android"/>
+      </div>
+    </div>
+  </div>
+</section>
 
-  Download on the App Store
-  Get it on Google Play
+<footer>
+  <div>
+    <ul class = "footer-bar">
+      <li class = "footer-bar-li"><a class="nav-bar-item" href="#">About Us</a></li>
+      <li class = "footer-bar-li"><a class="nav-bar-item" href="#">Support</a></li>
+      <li class = "footer-bar-li"><a class="nav-bar-item" href="#">Blog</a></li>
+      <li class = "footer-bar-li"><a class="nav-bar-item" href="#">Press</a></li>
+      <li class = "footer-bar-li"><a class="nav-bar-item" href="#">API</a></li>
+      <li class = "footer-bar-li"><a class="nav-bar-item" href="#">Jobs</a></li>
+      <li class = "footer-bar-li"><a class="nav-bar-item" href="#">Privacy</a></li>
+      <li class = "footer-bar-li"><a class="nav-bar-item" href="#">Terms</a></li>
+    </ul>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    &copy; 2014 Instagram
+  </div>
+</footer>
 </body>
 </html>
