--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,15 +14,15 @@
     <div class="div-geral">
 
       <div class="div-container-1">
-        <img src="/home/gg/Documentos/Ironhack/Week 1/lab-css-instagram-clone/starter-code/images/phones.png" alt="phones"
+        <img src="images/phones.png" alt="phones"
           height="400px">
       </div>
 
       <div class="div-container-2">
 
         <div class="brand-img">
-          <p><img src="/home/gg/Documentos/Ironhack/Week 1/lab-css-instagram-clone/starter-code/images/brand.png" alt="brand"
-              height="60px;"><button><img src="/home/gg/Documentos/Ironhack/Week 1/lab-css-instagram-clone/starter-code/images/home.png"
+          <p><img src="images/brand.png" alt="brand"
+              height="60px;"><button><img src="images/home.png"
                 alt="home"> Log in</button></p>
         </div>
 
@@ -35,8 +35,8 @@
             easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
             Oh yeah, did we mention it's free?</p>
             <div class="button">
-          <button><img src="../starter-code/images/badge-iphone.png" alt="badge-iphone"></button>
-          <button><img src="../starter-code/images/badge-android.png" alt="badge-android"></button>
+          <button><img src="images/badge-iphone.png" alt="badge-iphone"></button>
+          <button><img src="images/badge-android.png" alt="badge-android"></button>
           </div>
         </div>
       </div>
