almost done just some details to finish

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,7 +12,7 @@
     <section class="text">
       <div class="logo">
         <img src="./images/brand.png" alt="logo insta">
-        <button><img src="./images/home.png" alt="button">Log in</button>
+        <button><img src="./images/home.png" alt="button"><strong>Log In</strong></button>
       </div>
       <div class="content">
       <h1>Capture and Share <br> the World's Moments</h1>
