--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <meta name="author" content="AB Rao">
+  <title>Acme Web Deisgn | Welcome</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <header>
+    <div class = "title">
+      <img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/starter-code/images/brand.png" alt="Instagram">
+      <img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/starter-code/images/home.png" alt="Home-Icon">
+      <img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/starter-code/images/bgtile.png" alt="Bg-Title">
+      <p class = "homefont">Log In</p>
+    </div>
+  </header>
+  <section>
+    <div class = "content">
+      <img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/starter-code/images/frame.png" alt="Frame">
+      <h2 class = "caption">Capture and Share the World's Moments</h2>
+      <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to
+        share your life with friends and family.
+        Take a picture or video, choose a filter to transform its look and feel, then post to
+        Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more.
+        It's a new way to see the world. Oh yeah, did we mention it's free?</p>
+    </div>
+    <div class = "phones">
+      <img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/starter-code/images/phones.png" alt="Phone">
+    </div>
+    <div class = "appstores">
+      <img src="https://github.com/ironhack-labs/lab-css-instagram-clone/raw/master/starter-code/images/badge-android.png" alt="Android">
+      <img src="https://github.com/ironhack-labs/lab-css-instagram-clone/raw/master/starter-code/images/badge-iphone.png" alt="iPhone">
+    </div>
+  </section>
+  <footer>
+    <nav>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class = "registry">@2014 Instagram</li>
+      </ul>
+    </nav>
+  </footer>
 </body>
 </html>
