--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,69 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="wrapper">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
+    <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="element-content left-image">
+      <img src="images/phones.png" alt="Phones Image">
+    </div>
 
-  Oh yeah, did we mention it's free?
+    <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
+    <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
 
-  Download on the App Store
-  Get it on Google Play
+    <div class="element-content right-content">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <header>
+        <div class="left-header">
+          <img src="images/brand.png" alt="Instagram Logo Image">
+        </div>
 
-  &copy; 2014 Instagram
+        <div class="right-header">
+          <button class="log-button"><img src="images/home.png" alt="">Log in</button>
+        </div>
+      </header>
+      <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
+
+      <section>
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </section>
+
+      <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
+      <div class="download-buttons">
+        <button>Download on the App Store</button>
+        <button>Get it on Google Play</button>
+      </div>
+
+    </div>
+
+    <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
+    <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
+
+  </div>
+
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li id="copyright">&copy; 2014 Instagram</li>
+    </ul>
+
+  </footer>
+
 </body>
 </html>
