--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+    <div class="backgroundG">
+      </div>
+<div class="container">
+    
+    
+      <img class="phone" src="./images/phones.png">
+      <div class="textbox">
+      <header>
+          <h1><img class="logo" src="./images/brand.png"></h1>
+          <button><img class="home" src="./images/home.png"> Log in</button>
+      </header>
 
-  Capture and Share the World's Moments
+      <section class="background">
+          <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+          <p>Oh yeah, did we mention it's free?</p>
+      </section>
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="platform">
+          <a href="#"><img src="./images/badge-iphone.png"></a>
+          <a href="#"><img src="./images/badge-android.png"></a>
+      </div>
+    </div>
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+  <ul>
+  <li><a href="#">About Us</a></li>
+  <li><a href="#">Support</a></li>
+  <li><a href="#">Blog</a></li>
+  <li><a href="#">Press</a></li>
+  <li><a href="#">API</a></li>
+  <li><a href="#">Jobs</a></li>
+  <li><a href="#">Privacy</a></li>
+  <li><a href="#">Terms</a>∂</li>
+  <li class="copyright">© 2014 Instagram</li>
+  </ul>
+  <footer>
+  
+  
 </body>
 </html>
