--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
+
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div id="phones">
+      <img src="images/phones.png">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div id="content">
 
-  Oh yeah, did we mention it's free?
+      <header>
+        
+        <a href =""><img src="./images/brand.png" style="width: 80%"></a>
+        <button><img src="./images/home.png"><span id="home">Log in</span></button>
+      
+      </header>
 
-  Download on the App Store
-  Get it on Google Play
+        <div id="capture">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+          <h1>Capture and Share the World's Moments</h1>
 
-  &copy; 2014 Instagram
+          <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.<br>
+
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+
+          Oh yeah, did we mention it's free?</p>
+
+          <div id="download">
+  
+            <img src="images/badge-iphone.png" style="margin-right:2%;">
+            <img src="images/badge-android.png" style="margin-left:2%;">
+  
+          </div>
+
+        </div>
+
+    </div>    
+
+  </section>
+
+  <footer>
+
+  <nav>
+
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+    </ul>
+
+  </nav>
+
+    <p id="cw">&copy; 2014 Instagram</p>
+
+  </footer>
+
 </body>
+
 </html>
