--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -26,22 +26,27 @@
         </div>
 
         <div class="right-header">
-          <button class="log-button"><img src="images/home.png" alt="">Log in</button>
+          <button class="log-button">
+            <img src="images/home.png" alt="">
+            <span>Log in</span>
+          </button>
         </div>
       </header>
       <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
 
       <section>
         <h1>Capture and Share the World's Moments</h1>
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p>
       </section>
 
       <!--xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx-->
       <div class="download-buttons">
-        <button>Download on the App Store</button>
-        <button>Get it on Google Play</button>
+        <!--<a id="badge-iphone" href="#0">badge-iphone</a>-->
+        <!--<a id="badge-android" href="#0">badge-android</a>-->
+        <img src="images/badge-iphone.png" alt="">
+        <img src="images/badge-android.png" alt="">
       </div>
 
     </div>
@@ -53,17 +58,16 @@
 
   <footer>
     <ul>
-      <li>About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
+      <li><a href="#0">About Us</a></li>
+      <li><a href="#0">Support</a></li>
+      <li><a href="#0">Blog</a></li>
+      <li><a href="#0">Press</a></li>
+      <li><a href="#0">API</a></li>
+      <li><a href="#0">Jobs</a></li>
+      <li><a href="#0">Privacy</a></li>
+      <li><a href="#0">Terms</a></li>
       <li id="copyright">&copy; 2014 Instagram</li>
     </ul>
-
   </footer>
 
 </body>
