--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="./css/main.css" rel="stylesheet"> 
 </head>
+ 
 <body>
-  Instagram
+  
+ <div class="blueBackground">
+  </div>
+  
+  <div class="container">
 
-  Capture and Share the World's Moments
+    <div class="phones"> 
+        <img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/starter-code/images/phones.png" alt="smartphones" height="90%" width="90%">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class= "logobutton">
+      <img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/starter-code/images/brand.png" alt="instagram logo">
+      <div class="button">
+        <button><img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/starter-code/images/home.png" alt="home-button">Log In</button>
+    </div>
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="textbox">
+      <h1>Capture and Share<br>the World's Moments</h1>
 
-  Oh yeah, did we mention it's free?
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <p>Oh yeah, did we mention it's free?</p>
+  <img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/starter-code/images/badge-iphone.png" alt="appstore-button">
+  <img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/starter-code/images/badge-android.png" alt="googleplay-button">
+    </div>
+  </div>
+  
+  <div class="footer">
+    <ul>
+      <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li class="copyright">&copy; 2014 Instagram</li>
+    </ul>
+    </div>
 
-  &copy; 2014 Instagram
+
+  
 </body>
 </html>
