--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+<div id="master-container">
+  <div id="banner"></div>
 
-  Capture and Share the World's Moments
+  <div id="container">
+    <div id="phone">
+      <img src="./images/phones.png" alt="iphone5">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div id="box-right">
+<div id="logo"><img src="./images/brand.png" alt=""></div>
+ <a href="#" id="login"><img src="./images/home.png" alt="">log in</a>
+      <div id="sidebox">
+        <h1> Capture and Share the World's Moments</h1>
+        <p> Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+       <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+       
 
-  Oh yeah, did we mention it's free?
+        <p>  Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+        <!-- Download on the App Store
+        Get it on Google Play -->
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    </div>
 
-  &copy; 2014 Instagram
+
+    <footer>
+      <div>
+        <a href="#">        About Us          </a>  
+        <a href="#"> Support</a>  
+        <a href="#">Blog</a>  
+        <a href="#">Press</a>  
+        <a href="#">API</a>  
+        <a href="#">Jobs</a>  
+        <a href="#">Privacy</a>  
+        <a href="#">Terms</a>  
+        &copy; 2014 Instagram
+      </div>
+    </footer>
+
+  </div>
+</div>
 </body>
+
 </html>
