--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,43 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  Instagram
+  <div class = "phones">
+    <img src="./images/phones.png" alt="Phones">
+  </div>
+  <div class= "logo">
+    <img src="./images/brand.png" alt="Instagram logo">
+    <div class = "login">
+      <button class="btn"><i class="fa fa-home"></i> Log In</button>
+    </div>
+  </div>
+  <div class = "description">
+    <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life  <br>with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <p>Take a picture or video, choose a filter to transform its look <br>and feel, then post to Instagram &mdash; it's that easy. You can <br>even share to Facebook, Twitter, Tumblr and more. It's a <br>new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <p>Oh yeah, did we mention it's free?</p>
+    <div class = "stores">
+      <img src="./images/badge-iphone.png" alt="App Store">
+      <img src="./images/badge-android.png" alt="Android Store">
+    </div>
+  </div>
+  <div class = "contact">
+    <ul>
+      <li>ABOUT US</li>
+      <li>SUPPORT</li>
+      <li>BLOG</li>
+      <li>PRESSs</li>
+      <li>API</li>
+      <li>JOBS</li>
+      <li>PRIVACY</li>
+      <li>TERMS</li>
+      <li id = "copyright">&copy; 2014 INSTAGRAM</li>
+  </div>
 </body>
 </html>
