Instagram con boton chungo

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link type="text/css" rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="contenido">
+    <div class="leftcont">
+      <img src="./images/phones.png" alt="">
+    </div>
+    <div class="rightcont">
+      <div>
+        <div class="instalogo">
+          <img src="./images/brand.png" alt="">
 
-  Capture and Share the World's Moments
+        </div>
+        <div class="botonlogo">
+          <button><img src="./images/home.png" alt="">Log in</button>
+        </div>
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="clearfloat"></div>
+      <div class="conttext">
+        <h2>
+          Capture and Share the World's Moments
+        </h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>
+          Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+          <br><br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br><br>
+          Oh yeah, did we mention it's free?
+        </p>
+      </div>
+      <div class="applelogo">
+        <img src="./images/badge-iphone.png" alt="">
+      </div>
+      <div class="andologo">
+        <img src="./images/badge-android.png" alt="">
+      </div>
+    </div>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+  </div>
+  <div class="clearfloat"></div>
+  <div class="links">
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li class="copyr">&copy; 2014 Instagram</li>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    </ul>
+  </div>
 </body>
+
 </html>
