--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
-  Instagram
+<body>  
+  <main id="center-content">
+    <div id="iphone-img">
+      <img src="./images/phones.png" alt="iphone images">
+    </div>
+    <div class="line-one">
+        <img class="insta" src="./images/brand.png" alt=""><button><img src="./images/home.png" alt="kjb"><b>Log in</b> </button>
+      </div>
+    <div id="content">
+       
+      <div class="content-class">
 
-  Capture and Share the World's Moments
+        <h1>Capture and Share <br> the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p class="paragraphs">Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p class="paragraphs">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+        <p class="paragraphs">Oh yeah, did we mention it's free?</p>
+      </div>
+      
+    </div>
+    <div class="downloads">
+        <img class="apple" src="./images/badge-iphone.png" alt="Download iphone version">
+        <img src="./images/badge-android.png" alt="Download android version">
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </main>
+  <nav id="menu">
+  <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </nav>
 </body>
 </html>
