--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+    <section class="fondoAzul"></section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <section id="principal">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <div id="telefonos">
+            <img src="images/phones.png" alt="">
+            <div id="contenedorPrincipal">
+                <div id="logo">
+                    <img class="brand" src="images/brand.png" alt="brand">
+                    <button class="login"><img src="images/home.png" alt=""> Log in </button>
 
-  Oh yeah, did we mention it's free?
+                </div>
 
-  Download on the App Store
-  Get it on Google Play
+                <div id="captureShare">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+                    <h1 class="titleCapture">
+                        Capture and Share the World's Moments
+                    </h1>
 
-  &copy; 2014 Instagram
+                    <p>
+                        Instagram is a fast, beautiful and fun way to share your life with friends and family.
+                    </p>
+
+                    <p>
+                        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                    </p>
+
+                    <p>
+                        Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play
+                    </p>
+
+                    <div class="stores">
+                        <img src="images/badge-android.png" alt="badge-android">
+                        <img src="images/badge-iphone.png" alt="badge-iphone">
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
+
+    </section>
+
+
+    <footer>
+        <ul>
+            <li>About Us</li>
+            <li>Support</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>API</li>
+            <li>Jobs</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li class="insta">&copy; 2014 Instagram</li>
+
+        </ul>
+    </footer>
+
 </body>
+
 </html>
