--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section class="sec section1__container">
+    <div class="section1__container__phoneImg">
+      <img src="https://github.com/YaredMyers/lab-css-instagram-clone/blob/master/starter-code/images/phones.png?raw=true">
+    </div>
+  </section>
+  <section class="sec section2__container">
+      <div class="section2__logoImg">
+        <img src="https://github.com/YaredMyers/lab-css-instagram-clone/blob/master/starter-code/images/brand.png?raw=true" alt="Oficial Instagram logo">
+        <button><img src="images/home.png" alt="Home icon"> Log in</button>
+      </div>
+    </section>
+  <div class="section3__container">
+  <h1>Capture and Share the World's Moments</h1>
+  <div class="section3__container__description">
+  <p class="section3__p1">Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+  <p class="section3__p2">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+  <p class="section3__p3">Oh yeah, did we mention it's free?</p>
+</div>
+<div class"section3__markets">
+  <img src="https://github.com/YaredMyers/lab-css-instagram-clone/blob/master/starter-code/images/badge-iphone.png?raw=true">
+  <img src="https://github.com/YaredMyers/lab-css-instagram-clone/blob/master/starter-code/images/badge-android.png?raw=true">
+</div>
+</div>
+<footer>
+<nav class="nav">
+  <div class="nav__container">
+<ul class="nav__container__list">
+  <li><a href="#" target="_blank">About us</a></li>
+  <li><a href="#" target="_blank">Support</a></li>
+  <li><a href="#" target="_blank">Blog</a></li>
+  <li><a href="#" target="_blank">Press</a></li>
+  <li><a href="#" target="_blank">API</a></li>
+  <li><a href="#" target="_blank">Jobs</a></li>
+  <li><a href="#" target="_blank">Privacy</a></li>
+  <li><a href="#" target="_blank">Terms</a></li>
+</ul>
+</div>
+</nav>
+<div class="nav__container__copy">
+ <p>&copy; 2014 Instagram</p>
+</div>
+</footer>
 </body>
 </html>
