--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/main.css">
+  
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<section id="fondo">
+</section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <img id="imagen-iphone"src="images/phones.png" alt="imagen-iphone">
+  
 
-  Oh yeah, did we mention it's free?
+  <div id="contenido">
+    <section id="cabecera">
+      <img src="images/brand.png" alt="logo-instagram">
+      <a href="#" id="home"><img src="images/home.png" alt="login"><span>Log in</span></a>
+    </section>
 
-  Download on the App Store
-  Get it on Google Play
+    <section id="texto">
+      <div>
+          <h2 id="claim">Capture and Share <br/>the World's Moments</h2>
+              <p id="description">Instagram is a <span id="strong">fast</span>, <span id="strong">beautiful</span> and <span id="strong">fun</span> way to share your life with friends and family.
+              <br/><br/>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              <br/><br/>Oh yeah, did we mention it's free?</p>
+      </div>  
+     <img class="download" src="images/badge-iphone.png" alt="app-store">
+      <img class="download" src="images/badge-android.png" alt="android-store">
+    </section>
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+<footer>
+  <ul>
+    <li>About us</li>
+    <li> Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li id="copyright"> &copy; 2014 Instagram</li>
+  </ul>
+  </footer>
 </body>
 </html>
