Se crea el html y el css

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,39 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <img src="images/phones.png" class="phones">
+  <header>
+    <img src="images/brand.png" class="brand">
+    <a href="#"><img src="images/home.png" class="home">Log in</a>
+  </header>
+  <section class="superior">
+    <div class="text">
+      <h2>Capture and Share<br>the World's Moments.</h2>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+      Oh yeah, did we mention it's free?</p>
+  </div>
+  </section>
+  <section class="inferior">
+    <img src="images/badge-iphone.png" class ="badge">
+    <img src="images/badge-android.png"class ="badge">
+  </section>
+  <footer>
+    <ul>
+      <li class="letras">About Us</li>
+      <li class="letras">Support</li>
+      <li class="letras">Blog</li>
+      <li class="letras">Press</li>
+      <li class="letras">API</li>
+      <li class="letras">Jobs</li>
+      <li class="letras">Privacy</li>
+      <li class="letras">Terms</li>
+      <li class="letras">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
