--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <title>Instagram Clone</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type= "Text/CSS" href="css/main.css">
 </head>
+<!DOCTYPE html>
+<html lang="en">
+
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+    <header>
+        
+      <div id="position-header">
+        <img class="logo-insta" src="images/brand.png" alt="logo instagram">
+        <a href="#"><div class="log-in-button"> 
+            <img src="images/home.png" alt="home">
+          <p>Log in</p>
+      </div>
+       </a>
+      </header>
+      <img class="mobile-image" src="images/phones.png" alt="phones">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<section class="floating-text">
+<div>
+  <h2>Capture and Share the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <p>Oh yeah, did we mention it's free?</p>
+</div>
+<div>
+    <a class="download-buton" href="#"><img src="images/badge-iphone.png"  alt="Download on the App Store"></a>
+    <a class="download-buton" href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
+  </div>
+</section>
+<footer>
+  <ul class="none decoration">
+  <li><a href="#">About Us</a></li>
+  <li><a href="#">Support</a></li>
+  <li><a href="#">Blog</a></li>
+  <li><a href="#">Press</a></li>
+  <li><a href="#"> API</a></li>
+  <li><a href="#">Jobs</a></li>
+  <li><a href="#">Privacy</a></li>
+  <li><a href="#">Terms</a></li>
+  </ul>
+  <p>&copy; 2014 Instagram</p>
+</footer>
 </body>
 </html>
