Primera version clone Instagram

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="brand">
+   <img src="images/brand.png">
+  </div>
+  <div class="bot-log">
+    <form>
+      <button>Log in</button>
+    </form> 
+  </div>
 
-  Capture and Share the World's Moments
+  <div class="movil">
+    <img src="images/phones.png">
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="texto">
+    <h4>Capture and Share the World's Moments</h4>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <p> 
+        Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  
+        Oh yeah, did we mention it's free?
+      </p>  
+  </div>
+  <div class="iphone">
+    <img src="images/badge-iphone.png">
+  </div> 
+  <div class="android">  
+    <img src="images/badge-android.png">
+  </div>
+    <nav>
+      <div class="lista-baja">
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+        </ul>
+        &copy; 2014 Instagram
+      </div>
+    </nav> 
 </body>
 </html>
