--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+
 </head>
 <body>
-  Instagram
+  <section class="global container">
+    <div class="mobile">
+      <img src="../starter-code/images/phones.png" alt="">
+    </div>
+    <div class="insta-text">
+      <header>
+        <img id="insta-logo" src="../starter-code/images/brand.png" alt="">
+        <div class="home-button">
+            <img id="home-logo" src="../starter-code/images/home.png" alt="">
+            <h5>Log in</h5>
+        </div>
+      </header>
+      <article>
+        <h3>Capture and Share the World's Moments</h3>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p> <br>          
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p><br>          
+        <p> Oh yeah, did we mention it's free?</p>
 
-  Capture and Share the World's Moments
+      </article>
+      <footer>        
+        <img src="../starter-code/images/badge-iphone.png" alt="">
+        <img src="../starter-code/images/badge-android.png" alt="">
+      </footer>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    </div>
+  </section>
+  <footer class="links container">
+    <ul>
+       <li>ABOUT US</li>
+       <li>SUPPORT</li>
+       <li>BLOG</li>
+       <li>PRESS</li>
+       <li>API</li>
+       <li>JOBS</li>
+       <li>PRIVACY</li>
+       <li>TERMS</li>
+       <li class="ltd">&copy; 2014 INSTAGRAM</li>
+    </ul>      
+  </footer>  
 </body>
 </html>
